TMM queue list display

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -102,6 +102,8 @@ teammatchmaking.title=Team matchmaking
 teammatchmaking.invitePlayer=Invite player
 teammatchmaking.invite=Invite
 teammatchmaking.availableQueues=Available queues
+teammatchmaking.playersInQueue=In Queue: {0,number,#}
+teammatchmaking.joinQueue=Join
 teammatchmaking.chat=Chat / Map pool?
 teammatchmaking.statistics=Statistics / Chat?
 teammatchmaking.leaveQueue=Leave queue
