tmm queue UI, timer

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -49,7 +49,7 @@ leaderboard.ranked1v1=1v1 Rating
 leaderboard.global=Global Rating
 play.teamMatchmaking=Matchmaking
 play.custom=Custom games
-play.ranked1v1=1v1 ranked match
+play.ranked1v1=1v1 ranked match (deprecated)
 play.coop=Co-Op
 
 leaderboard.failedToLoad=Leaderboard could not be loaded
@@ -102,12 +102,13 @@ teammatchmaking.title=Team matchmaking
 teammatchmaking.invitePlayer=Invite player
 teammatchmaking.invite=Invite
 teammatchmaking.availableQueues=Available queues
-teammatchmaking.playersInQueue=In Queue: {0,number,#}
+teammatchmaking.partiesInQueue=In Queue: {0,number,#}
+teammatchmaking.teamSize=Team size: {0,number,#}
 teammatchmaking.joinQueue=Join
+teammatchmaking.queuePopTimer={0,number,0}:{1,number,00}
 teammatchmaking.chat=Chat / Map pool?
 teammatchmaking.statistics=Statistics / Chat?
-teammatchmaking.leaveQueue=Leave queue
-teammatchmaking.rating=Rating: {0,number,#}
+teammatchmaking.rating=Placement (1v1)
 teammatchmaking.gameCount=Games: {0,number,#}
 teammatchmaking.notification.invite.title=Invited to party
 teammatchmaking.notification.invite.message={0} has invited you to join their party
