Implement auto-update
Uses update4j to update the client automatically. During the build
process, an update4j.xml is generated as well as an archive file that
contains all the required client files. Both are uploaded to a server
via SSH, where the archive is extracted.

The client will check if a new version is available, either using the
managed configuration file that resides on the FAF server (for stable
releases) or (for pre-releases) via the GitHub releases API.

If a new version is available, the client uses update4j to download all
files to a temporary location. Afterwards, a separate Java application
is spawned which waits for the client to terminate. Once that happens,
the application will finalize the update by copying the update files
over the existing installation and removing all obsolete files.

On next client start, the application is updated.

Fixes #1753

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -420,7 +420,6 @@ clientUpdateAvailable.downloadAndInstall=Download
 clientUpdateAvailable.releaseNotes=Release notes
 clientUpdateDownloadFailed.notification=Error while downloading client update
 clientUpdateDownloadFailed.retry=Retry
-updateCheckTask.title=Checking for update
 clientUpdateCheckTask.title=Checking for client update
 clientUpdateDownloadTask.title=Downloading client update
 mapDownloadTask.title=Downloading map {0}
@@ -520,6 +519,8 @@ settings.giveFeedback=Open
 settings.windowTitle=Settings
 settings.general=General
 settings.language=Language
+settings.general.autoUpdate=Auto-Update
+settings.general.autoUpdate.description=Automatically updates the client in the background.
 settings.general.startTab=Starting Tab
 settings.general.startTab.description=The tab to open when you start the client.
 settings.chat=Chat
