Added Checkbox for showing only replays from last year - missing implementation to actually filter and missing translation to most languages

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -765,3 +765,4 @@ startTab.title=Select start tab
 startTab.save=Save
 startTab.wantToConfigure=Select the tab to start at:
 startTab.configure=Configure
+vault.replays.onlyShowLastYear=Only from last year
