--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -748,3 +748,4 @@ replay.abortAfterMapNotFound=Abbrechen und mehr Information
 replay.mapDownloadFailed=Karten laden fehlgeschlagen für dieses Replay
 replay.mapDownloadFailed.wannaContinue=Wir konnten die passende Karte zu diesem Replay nicht finden. Dies ist lediglich eine Warnung, die kannst trotzdem versuchen das Replay zu starten.
 map.unknown=unbekannt
+vault.replays.onlyShowLastYear=Nur Replays vom letzten Jahr
