--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -169,6 +169,7 @@ chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 
 games.create=Create game
 games.create.minRating=Min.
+game.create.spawnCount=Number of spawns
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show private games
 games.showModdedGames=Show modded games
