--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -77,8 +77,8 @@ ranked1v1.rankingOutOf = ze {0,number,\#} hráčů
 ranked1v1.searching = Hledám soupeře...
 ranked1v1.winLossRation = Poměr výher/proher
 ranked1v1.rankingFormat = \#{0,number,\#}
-ranked1v1.notification.title = Dostupná 1v1 Ranked hra
-ranked1v1.notification.message = Klikni zde pro otevření 1v1 záložky
+ranked1v1.availableOpponentNotification.title = Dostupná 1v1 Ranked hra
+ranked1v1.availableOpponentNotification.message = Klikni zde pro otevření 1v1 záložky
 statusBar.chatConnected = Chat připojen
 statusBar.chatConnecting = Připojování k chatu...
 statusBar.chatDisconnected = Chat odpojen
