--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -78,8 +78,8 @@ ranked1v1.rankingOutOf = von {0,number,\#} Spielern
 ranked1v1.searching = Suche nach Gegner…
 ranked1v1.winLossRation = Gewonnen/Verloren Verhältnis
 ranked1v1.rankingFormat = \#{0,number,\#}
-ranked1v1.notification.title = 1v1 Spiel verfügbar
-ranked1v1.notification.message = Klicke hier, um die 1v1 Ansicht zu öffnen
+ranked1v1.availableOpponentNotification.title = 1v1 Spiel verfügbar
+ranked1v1.availableOpponentNotification.message = Klicke hier, um die 1v1 Ansicht zu öffnen
 statusBar.chatConnected = Chat verbunden
 statusBar.chatConnecting = Verbinde mit Chat…
 statusBar.chatDisconnected = Chat getrennt
