--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -85,8 +85,10 @@ ranked1v1.rankingOutOf=out of {0,number,#} players
 ranked1v1.searching=Searching for opponent…
 ranked1v1.winLossRation=Win/loss ratio
 ranked1v1.rankingFormat=#{0,number,#}
-ranked1v1.notification.title=1v1 ranked match available
-ranked1v1.notification.message=Click here to open the 1v1 tab
+ranked1v1.availableOpponentNotification.title=1v1 ranked match available
+ranked1v1.availableOpponentNotification.message=Click here to open the 1v1 tab
+ranked1v1.matchCancelledNotification.title=Game launch cancelled
+ranked1v1.matchCancelledNotification.message=An error happened during startup
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
