Add a notification to onMatchFoundMessage

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -89,6 +89,8 @@ ranked1v1.availableOpponentNotification.title=1v1 ranked match available
 ranked1v1.availableOpponentNotification.message=Click here to open the 1v1 tab
 ranked1v1.matchCancelledNotification.title=Game launch cancelled
 ranked1v1.matchCancelledNotification.message=An error happened during startup
+ranked1v1.matchFoundNotification.title=Match found
+ranked1v1.matchFoundNotification.message=Your game is being set up...
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
