Change map generation name matching
Reduces strictness of generated map name matcher to allow for options to be passed in map name

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -169,6 +169,8 @@ chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 
 games.create=Create game
 games.create.minRating=Min.
+game.create.spawnCount=Number of spawns
+game.create.waterDensity=Amount of Water on Map
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show private games
 games.showModdedGames=Show modded games
