Add ability to accept generated maps with options
Reduces strictness of generated map name matcher to allow for options to be passed in map name

Adds in GeneratorPrefs.java options

Disable options when map name given

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -169,6 +169,8 @@ chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 
 games.create=Create game
 games.create.minRating=Min.
+game.create.spawnCount=Number of spawns
+game.create.mapSize=Map Size
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show private games
 games.showModdedGames=Show modded games
@@ -180,8 +182,6 @@ game.create.map=Map
 game.create.title=Title (required)
 game.create.password=Password (optional)
 game.create.randomMap=Select random map
-game.create.generatedMap=Generate new map
-game.create.generatedMapNew=NEW
 game.create.defaultGameTypeMarker=(default)
 game.create.rating=Desired rating
 game.create.deselectAll=Deselect all
@@ -193,6 +193,20 @@ game.create.mods=Mods
 game.create.titleMissing=Title is missing
 game.create.featuredModMissing=Game type is missing
 game.create.failed=Game could not be created.
+game.generate=Generate new map
+game.generate.recreate=Regenerate map using the following map name:
+game.generate.generateNew=Generate a new map using the following options:
+game.generate.dialog=Map Generator Options
+game.generate.nameCaution=Enter the name of a generated map you want to regenerate. Map name must be of the form neroxis_map_generator_(version)_(seed)_(options).
+game.generate.generatedName=Map Name
+game.generate.generatedMapNew=NEW
+game.generate.waterSlider=Water
+game.generate.plateauSlider=Plateaus
+game.generate.mountainSlider=Mountains
+game.generate.rampSlider=Ramps
+game.generate.random=Random
+game.generate.none=None
+game.generate.lots=Lots
 game.rehost.failed=Rehosting game failed.
 game.title=Title
 game.players=Players
@@ -733,6 +747,9 @@ replay.couldNotOpen=Replay with id ''{0}'' , could not be opened.
 error.game.notTerminatedCorrectly=The game did not terminate correctly and has still certain files open. Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
 map.id=#{0}
 mapGenerator.generationFailed=There was an error during map generation
+mapGenerator.invalidName=Map name is not a generated map name
+mapGenerator.tooNewVersion=This client does not support this version of the map generator. Please update the client to use this version.
+mapGenerator.tooOldVersion=This map generator version is no longer supported.
 revert.alreadySymlinked=Revert this I got it symlinked
 mapDir.changed.noneAscii=We detected you have a username with special characters and moved your vault directory to fallback location.
 mapDir.changed.unix=We detected you have a unix system and moved your vault directory to fallback location.
