--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -170,7 +170,7 @@ chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 games.create=Create game
 games.create.minRating=Min.
 game.create.spawnCount=Number of spawns
-game.create.waterDensity=Amount of Water on Map
+game.create.waterOption=Water
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show private games
 games.showModdedGames=Show modded games
@@ -182,7 +182,7 @@ game.create.map=Map
 game.create.title=Title (required)
 game.create.password=Password (optional)
 game.create.randomMap=Select random map
-game.create.generatedMap=Generate new map
+game.create.generatedMap=Generate map
 game.create.generatedMapNew=NEW
 game.create.defaultGameTypeMarker=(default)
 game.create.rating=Desired rating
