Added in separate dialog window for map generation options to add a little more room and make it look better. Changed the initmapselection and setmapselection functions of the CreateGameController to protected so they could be accessed by the GenerateMapController.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -170,7 +170,6 @@ chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 games.create=Create game
 games.create.minRating=Min.
 game.create.spawnCount=Number of spawns
-game.create.waterOption=Water
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show private games
 games.showModdedGames=Show modded games
@@ -182,8 +181,6 @@ game.create.map=Map
 game.create.title=Title (required)
 game.create.password=Password (optional)
 game.create.randomMap=Select random map
-game.create.generatedMap=Generate map
-game.create.generatedMapNew=NEW
 game.create.defaultGameTypeMarker=(default)
 game.create.rating=Desired rating
 game.create.deselectAll=Deselect all
@@ -195,6 +192,12 @@ game.create.mods=Mods
 game.create.titleMissing=Title is missing
 game.create.featuredModMissing=Game type is missing
 game.create.failed=Game could not be created.
+game.generate=Generate new map
+game.generate.dialog=Map Generator Options
+game.generate.nameCaution=Map name will overwrite all selected options
+game.generate.generatedName=Generated Map Name (optional)
+game.generate.generatedMapNew=NEW
+game.generate.waterOption=Generate map with water
 game.rehost.failed=Rehosting game failed.
 game.title=Title
 game.players=Players
