--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -632,7 +632,7 @@ view.showSidePane=Více detailů
 view.hideSidePane=Méně detailů
 menu.revealReplayFolder=Otevřít složku se záznamy
 menu.revealGamePrefsFile=Otevřít složku s game.prefs souborem
-game.create.generatedMap=Vytvořit mapu
+game.generate=Vytvořit mapu
 game.avgRating.format={0,number,\#}
 game.mapGeneration.notification.title=Vytváření mapy
 game.mapGeneration.notification.message=Čekej prosím. (Verze\: {0}, Seed\: {1})
