--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -655,7 +655,7 @@ view.hideSidePane=Verstecke Details
 menu.revealReplayFolder=Öffne Replay Ordner
 menu.revealGamePrefsFile=Öffne game.pref Ordner
 ranked1v1.queuePopTimer=Paare in {0,number,0}\:{1,number,00}
-game.create.generatedMap=Generiere Karte
+game.generate=Generiere Karte
 game.avgRating.format={0,number,\#}
 game.mapGeneration.notification.title=Karte wird generiert...
 game.mapGeneration.notification.message=Bitte warten. (Version\: {0}, Seed\: {1})
