--- a/src/main/resources/i18n/messages_iw.properties
+++ b/src/main/resources/i18n/messages_iw.properties
@@ -635,7 +635,7 @@ view.hideSidePane=הסתר פרטים
 menu.revealReplayFolder=הראה תיקיית הקלטות
 menu.revealGamePrefsFile=הראה את קובץ game.prefs
 ranked1v1.queuePopTimer=זמן המתנה משוער {0,number,0}\:{1,number,00}
-game.create.generatedMap=צור מפה
+game.generate=צור מפה
 game.avgRating.format={0,number,\#}
 game.mapGeneration.notification.title=יוצר מפה...
 game.mapGeneration.notification.message=אנה המתן. (גרסה\: {0}, סיד\: {1})
