--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -637,7 +637,7 @@ view.hideSidePane=Verberg details
 menu.revealReplayFolder=Toon replay folder
 menu.revealGamePrefsFile=Toon game.prefs file
 ranked1v1.queuePopTimer=Overeenkomend in {0,number,0}\:{1,number,00}
-game.create.generatedMap=Genereer map
+game.generate=Genereer map
 game.avgRating.format={0,number,\#}
 game.mapGeneration.notification.title=Map wordt gegenereerd...
 game.mapGeneration.notification.message=Wacht alstublieft. (Version\: {0}, Seed\: {1})
