--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -653,7 +653,7 @@ view.hideSidePane = Скрыть детали
 menu.revealReplayFolder = Открыть папку "replay"
 menu.revealGamePrefsFile = Открыть файл game.prefs
 ranked1v1.queuePopTimer = Игра через {0,number,0}\:{1,number,00}
-game.create.generatedMap = Сгенерировать карту
+game.generate = Сгенерировать карту
 game.avgRating.format = {0,number,\#}
 game.mapGeneration.notification.title = Карта генерируется...
 game.mapGeneration.notification.message = Ожидайте. (Version\: {0}, Seed\: {1})
