--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -597,7 +597,7 @@ menu.revealReplayFolder=Показати теку повторів
 menu.revealGamePrefsFile=Показати файл game.prefs
 # Fuzzy
 ranked1v1.queuePopTimer=Початок через {0,number,0}\:{1,number,00}
-game.create.generatedMap=Згенерувати мапу
+game.generate=Згенерувати мапу
 game.avgRating.format={0,number,\#}
 game.mapGeneration.notification.title=Генерація мапи...
 game.mapGeneration.notification.message=Будь ласка,зачекайте. (Версія\: {0}, Зерно\: {1})
