--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -789,3 +789,6 @@ mod.manager.simModsTooltip=SIM mods are such mods that effect the game play of a
 mod.manager.uiModsTooltip=UI mods are mods that only effect how you see the game.
 modVault.modManager=Manage active mods
 modVault.manageMods=Manage active mods
+
+theme.needsRestart.message=Changing the theme to ''{0}'' might require a restart.
+theme.needsRestart.quit=Quit
