Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -26,8 +26,11 @@ userMenu.showProfile = Profil
 menu.feedback = Commenter
 menu.exit = Quitter
 menu.settings = Paramètres
+# Fuzzy
 menu.revealMapFolder = Parcourir les cartes
+# Fuzzy
 menu.revealLogFolder = Parcourir les logs
+# Fuzzy
 menu.revealModFolder = Parcourir les mods
 main.community.news = Actualités
 main.chat = Chat
@@ -161,6 +164,7 @@ game.create.disconnected = Veuillez vous connecter
 game.create.map = Carte
 game.create.title = Titre (requis)
 game.create.password = Mot de passe
+# Fuzzy
 game.create.randomMap = Carte aléatoire
 game.create.defaultGameType = Par défault
 game.create.rating = Niveau demandé
@@ -203,8 +207,8 @@ game.mods.twoAndMore = {0} et {1,number,\#} autres
 game.gameStatus = État de la partie
 game.gameStatus.playing = En jeu
 game.gameStatus.lobby = En attente
-game.gameStatus.none=Aucun
-game.id=ID
+game.gameStatus.none = Aucun
+game.id = ID
 # I would also need context for that one if possible
 # Fuzzy
 game.time = Quand
@@ -313,11 +317,11 @@ mapVault.mostPlayed = Plus jouée
 mapVault.installButtonFormat = Installer  ({0})
 mapVault.uninstall = Désinstaller
 mod.description = Description
-mod.comments=Commentaires
-map.author=Conception
+mod.comments = Commentaires
+map.author = Conception
 # Création anonyme (anonymous creation) instead of Auteur.e Inconnu.e (unknown author) to avoid median point that may hurt reactionaries
-map.unknownAuthor=Création anonyme
-map.name=Nom
+map.unknownAuthor = Création anonyme
+map.name = Nom
 map.description = Description
 map.size = Taille
 map.rating = Niveau
@@ -534,9 +538,9 @@ mod.detail.updated = Mis à jour
 mod.detail.size = Taille
 mod.detail.installations = Installations
 mod.detail.version = Version
-mod.detail.dependencies=Dépendances
-map.noDescriptionAvailable=Aucun description fournie
-updater.taskTitle=Préparation du jeu
+mod.detail.dependencies = Dépendances
+map.noDescriptionAvailable = Aucun description fournie
+updater.taskTitle = Préparation du jeu
 updater.downloadingFile = Téléchargement {0}
 updater.patchingFile = Application {0}
 serInfo.statistics.errorLoading = Impossible de charger les statistiques
@@ -549,9 +553,9 @@ userInfo.nameHistory.name = Nom
 userInfo.nameHistory.errorLoading = Impossible de charger les alias
 settings.chat.notifyOnAtMentionOnly = Notifier uniquement lors d'une mention @
 settings.chat.notifications = Notifications
-mod.displayName=Nom
-mod.author=Conception
-mod.uploadedDateTime=Envoyé
+mod.displayName = Nom
+mod.author = Conception
+mod.uploadedDateTime = Envoyé
 mod.updatedDateTime = Mis à jour
 mod.id = ID
 mod.uid = UID
@@ -585,9 +589,9 @@ gameChosen.couldNotLocatedGame = L'emplacement indiqué ne contient pas d'instal
 userInfo.statistics.errorLoading = Impossible de charger les statistiques
 settings.general.unitDatabase = Liste des unités
 unitDatabase.rackover = Rackover
-unitDatabase.spooky=Spooky
-game.player.rating=Niveau d'un des joueurs
-mapVault.ladder=Cartes de la rotation
+unitDatabase.spooky = Spooky
+game.player.rating = Niveau d'un des joueurs
+mapVault.ladder = Cartes de la rotation
 news.showLadderMaps = Afficher la rotation actuelle
 ranked1v1.showMaps = Afficher la rotation actuelle
 port = Port
@@ -612,43 +616,43 @@ settings.chat.chatFormat = Messagerie
 settings.chat.chatFormat.extended = Large
 settings.chat.chatFormat.compact = Compacte
 game.create.onlyFriends = Montrer seulement aux amis
-unknown=inconnnu.e
-dateWithTime={0] à  {1]
-main.tournaments=Tournois
-tournament.name=Nom
-tournament.status.finished=Terminé
-tournament.status.running=En cours
-tournament.status.openForRegistration=Ouvert
-tournament.status.closedForRegistration=Fermé
-tournament.noStartingDate=Pas de date de début
-tournament.noCompletionDate=Pas de date de fin
-loading=Chargement...
-updater.readingFileList=Lecture de la liste des fichiers
-secondAgo=il y a {0,number,\#} secondes
-vault.maps.searchError=Impossible de charger les cartes
-settings.notifications.displayNotification=Afficher les notifications
-replay.notFoundTitle=Partie introuvable
-replay.replayNotFoundText=Partie {0} introuvable
+unknown = inconnnu.e
+dateWithTime = {0] à  {1]
+main.tournaments = Tournois
+tournament.name = Nom
+tournament.status.finished = Terminé
+tournament.status.running = En cours
+tournament.status.openForRegistration = Ouvert
+tournament.status.closedForRegistration = Fermé
+tournament.noStartingDate = Pas de date de début
+tournament.noCompletionDate = Pas de date de fin
+loading = Chargement...
+updater.readingFileList = Lecture de la liste des fichiers
+secondAgo = il y a {0,number,\#} secondes
+vault.maps.searchError = Impossible de charger les cartes
+settings.notifications.displayNotification = Afficher les notifications
+replay.notFoundTitle = Partie introuvable
+replay.replayNotFoundText = Partie {0} introuvable
 # What is this ?
-settings.notifications.afterGameReview=Noter la partie
-tournament.openOnChallonge=Ouvrir sur challonge.com
-tournament.gameType=Type de partie \:
-tournament.startingAt=Débutée le \:
-tournament.completedAt=Finie le \:
-mapVault.owned=Cartes possédées
-map.hidden=Cachée
-map.hide=Cacher
-map.unrank=Rendre non-classée
-map.couldNotHide=Impossible de cacher la carte
-map.couldNotUnrank=Impossible de déclasser la carte
-modVersion.ranked=Classée
-game.missionName=Mission
-settings.appearance.backgoundImage=Papier peint
-settings.appearance.useDefaultImage=Image par défaut
-settings.appearance.chooseImage=Choisir l'image
-settings.general.theme.useNoImage=Pas d'image
-query.notContains=ne contient pas
-coop.unknownMission=Mission inconnue
-game.couldNotJoin=Impossible de rejoindre "{0}"
-discord.disallowJoins=Empêcher de rejoindre par discord
-replay.couldNotOpen=La rediffusion {0} n'a pas pu être chargée
+settings.notifications.afterGameReview = Noter la partie
+tournament.openOnChallonge = Ouvrir sur challonge.com
+tournament.gameType = Type de partie \:
+tournament.startingAt = Débutée le \:
+tournament.completedAt = Finie le \:
+mapVault.owned = Cartes possédées
+map.hidden = Cachée
+map.hide = Cacher
+map.unrank = Rendre non-classée
+map.couldNotHide = Impossible de cacher la carte
+map.couldNotUnrank = Impossible de déclasser la carte
+modVersion.ranked = Classée
+game.missionName = Mission
+settings.appearance.backgoundImage = Papier peint
+settings.appearance.useDefaultImage = Image par défaut
+settings.appearance.chooseImage = Choisir l'image
+settings.general.theme.useNoImage = Pas d'image
+query.notContains = ne contient pas
+coop.unknownMission = Mission inconnue
+game.couldNotJoin = Impossible de rejoindre "{0}"
+discord.disallowJoins = Empêcher de rejoindre par discord
+replay.couldNotOpen = La rediffusion {0} n'a pas pu être chargée
