Add sliders for Map Generator options
Adds ability to set preferences for Map Generator Terrain Generation for greater user control over the generated maps.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -197,7 +197,11 @@ game.generate.dialog=Map Generator Options
 game.generate.nameCaution=Map name will overwrite all selected options
 game.generate.generatedName=Generated Map Name (optional)
 game.generate.generatedMapNew=NEW
-game.generate.waterOption=Generate map with water
+game.generate.waterSlider=Amount of Water
+game.generate.plateauSlider=Amount of Plateaus
+game.generate.mountainSlider=Amount of Mountains
+game.generate.rampSlider=Amount of Ramps
+game.generate.random=Random
 game.rehost.failed=Rehosting game failed.
 game.title=Title
 game.players=Players
