--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -102,9 +102,10 @@ teammatchmaking.title=Team matchmaking
 teammatchmaking.invitePlayer=Invite player
 teammatchmaking.invite=Invite
 teammatchmaking.availableQueues=Available queues
-teammatchmaking.partiesInQueue=In Queue: {0,number,#}
+teammatchmaking.playersInQueue=In Queue: {0,number,#}
 teammatchmaking.teamSize=Team size: {0,number,#}
 teammatchmaking.joinQueue=Join
+teammatchmaking.leaveQueue=Leave
 teammatchmaking.queuePopTimer={0,number,0}:{1,number,00}
 teammatchmaking.chat=Chat / Map pool?
 teammatchmaking.statistics=Statistics / Chat?
