--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -85,8 +85,8 @@ ranked1v1.rankingOutOf = sur {0,number,\#} joueurs
 ranked1v1.searching = Recherche d'un adversaire…
 ranked1v1.winLossRation = Ratio V/D
 ranked1v1.rankingFormat = \#{0,number,\#}
-ranked1v1.availableOpponentNotification.title = Partie classée 1c1 disponible
-ranked1v1.availableOpponentNotification.message = Cliquez ici pour ouvrir l'onglet 1c1
+ranked1v1.notification.title = Partie classée 1c1 disponible
+ranked1v1.notification.message = Cliquez ici pour ouvrir l'onglet 1c1
 statusBar.chatConnected = Chat connecté
 statusBar.chatConnecting = Connexion au chat…
 statusBar.chatDisconnected = Chat déconnecté
