--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -84,8 +84,8 @@ ranked1v1.rankingOutOf = из {0,number,\#} игроков
 ranked1v1.searching = Поиск оппонента...
 ranked1v1.winLossRation = Победы/Поражения
 ranked1v1.rankingFormat = №{0,number,\#}
-ranked1v1.availableOpponentNotification.title = Доступна рейтинговая игра 1v1
-ranked1v1.availableOpponentNotification.message = Нажмите, чтобы открыть вкладку 1v1
+ranked1v1.notification.title = Доступна рейтинговая игра 1v1
+ranked1v1.notification.message = Нажмите, чтобы открыть вкладку 1v1
 statusBar.chatConnected = Чат подключен
 statusBar.chatConnecting = Подключаем чат...
 statusBar.chatDisconnected = Чат отключен
