#715: add report action to chat dialog

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -129,6 +129,7 @@ chat.userContext.addFriend=Add friend
 chat.userContext.removeFriend=Remove friend
 chat.userContext.addFoe=Add foe
 chat.userContext.removeFoe=Remove foe
+chat.userContext.report=Create report
 chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
@@ -765,3 +766,12 @@ startTab.title=Select start tab
 startTab.save=Save
 startTab.wantToConfigure=Select the tab to start at:
 startTab.configure=Configure
+report.user.text=Report user "{0}":
+report.description=Reason of report
+report.game.id=ID of replay (if happened in game)
+report.game.timeCode=TimeCode (if happened in game)
+report.success=User successfully reported!
+report.fail=Fill reason of report
+report.createProblem=Report creation failed
+report.wrongGameId=Id of game is required & numeric
+report.noDescription=Reason is required
