--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -400,6 +400,7 @@ clientUpdateAvailable.releaseNotes=Release notes
 clientUpdateDownloadFailed.notification=Error while downloading client update
 clientUpdateDownloadFailed.retry=Retry
 clientUpdateCheckTask.title=Checking for client update
+clientUpdateDownloadTask.title=Downloading client update
 mapDownloadTask.title=Downloading map {0}
 mapReplayTask.title=Downloading replay {0}
 downloadingModTask.downloading=Downloading mod {0}
@@ -494,6 +495,8 @@ settings.giveFeedback=Open
 settings.windowTitle=Settings
 settings.general=General
 settings.language=Language
+settings.general.autoUpdate=Auto-Update
+settings.general.autoUpdate.description=Automatically updates the client in the background.
 settings.general.startTab=Starting Tab
 settings.general.startTab.description=The tab to open when you start the client.
 settings.chat=Chat
