Fixes from Alex

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -176,6 +176,7 @@ game.create.mods=Mods
 game.create.titleMissing=Title is missing
 game.create.featuredModMissing=Game type is missing
 game.create.failed=Game could not be created.
+game.create.generatedMapNew=NEW
 game.generate=Generate new map
 game.generate.recreate=Regenerate map using the following map name:
 game.generate.generateNew=Generate a new map using the following options:
