--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -184,8 +184,6 @@ game.create.password=Password (optional)
 game.create.randomMap=Select random map
 game.create.defaultGameTypeMarker=(default)
 game.create.rating=Desired rating
-game.create.deselectAll=Deselect all
-game.create.reload=Reload
 game.create.create=Create
 game.create.searchMap=Search…
 game.create.gameType=Game type
@@ -783,3 +781,11 @@ startTab.save=Save
 startTab.wantToConfigure=Select the tab to start at:
 startTab.configure=Configure
 vault.replays.onlyShowLastYear=Only from last year
+mod.manager.uiMods=UI
+mod.manager.simMods=SIM
+mod.manager.deselectAll=Deselect all mods
+mod.manager.reload=Reload
+mod.manager.simModsTooltip=SIM mods are such mods that effect the game play of all players.
+mod.manager.uiModsTooltip=UI mods are mods that only effect how you see the game.
+modVault.modManager=Manage active mods
+modVault.manageMods=Manage active mods
