Create Vault Entity Controller as abstract class

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -306,6 +306,7 @@ login.ircServerHost=IRC server host
 login.apiBaseUrl=API base URL
 login.withEmailWarning=Please login with your username and not your email.
 
+vault.loading=Loading...
 vault.maps=Maps
 vault.mods=Mods
 vault.onlineReplays=Online Replays
@@ -318,6 +319,9 @@ vault.replays.ownReplays=Your replays
 vault.replays.displayQuery=Display search query
 vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
+vault.displayQuery=Display search query
+vault.queryPrompt=Build a query above or enter one manually
+vault.searchError=An error has occurred while searching.
 vault.more=More…
 vault.next=Next
 vault.previous=Previous
@@ -373,6 +377,8 @@ mapVault.newestMaps=Most recent
 mapVault.mostPlayed=Most played
 mapVault.installButtonFormat=Install ({0})
 mapVault.uninstall=Uninstall
+
+vault.upload=Upload…
 
 mod.description=Description
 mod.comments=Comments
@@ -656,6 +662,8 @@ replay.timeTooltip=Start time
 replay.modTooltip=Featured mod
 replay.durationTooltip=Real time
 replay.replayDurationTooltip=Replay length
+replay.team=Team {0}
+replay.noTeam=No Teams
 replay.playerCountTooltip=Players
 replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
@@ -674,6 +682,7 @@ search.sort.ascending=ascending
 search.sort.descending=descending
 query.contains=contains
 search.sort=Sort by
+search.perPage=Items per Page
 vault.mods.searchError=Mods could not be loaded
 vault.maps.searchError=Maps could not be loaded
 noDateAvailable=No date available
