Use i18n instead of hardcoded text

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -97,11 +97,12 @@ ranked1v1.winLossRation=Win/loss ratio
 ranked1v1.rankingFormat=#{0,number,#}
 ranked1v1.notification.title=1v1 ranked match available
 ranked1v1.notification.message=Click here to open the 1v1 tab
-teammatchmaking.leaveParty=Leave party
-teammatchmaking.invitePlayer=Invite player
+teammatchmaking.leaveParty=LEAVE PARTY
+teammatchmaking.invitePlayer=INVITE PLAYERS
 teammatchmaking.invite=Invite
 teammatchmaking.playersInQueue=IN QUEUE: {0,number,#}
-teammatchmaking.queuePopTimer={0,number,0}:{1,number,00}
+teammatchmaking.queuePopTimer=STARTING: {0,number,0}:{1,number,00}
+teammatchmaking.clan=[CLAN]:
 teammatchmaking.rating=RATING: {0,number,#}
 teammatchmaking.1v1Rating=1V1 RATING: {0,number,#}
 teammatchmaking.teamRating=TEAMGAME RATING: {0,number,#}
@@ -111,6 +112,8 @@ teammatchmaking.notification.invite.message={0} has invited you to join their pa
 teammatchmaking.notification.invite.join=Join
 teammatchmaking.ready=SELECT QUEUES BELOW AND WAIT FOR MATCH
 teammatchmaking.notReady=PLAY FORGED ALLIANCE FOREVER
+teammatchmaking.playerTitle=PLAYING MATCHMAKING AS:
+teammatchmaking.partyTitle=YOUR PARTY:
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
