Change ready button to play button

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -110,8 +110,8 @@ teammatchmaking.gameCount=GAMES PLAYED: {0,number,#}
 teammatchmaking.notification.invite.title=Invited to party
 teammatchmaking.notification.invite.message={0} has invited you to join their party
 teammatchmaking.notification.invite.join=Join
-teammatchmaking.ready=SELECT QUEUES BELOW AND WAIT FOR MATCH
-teammatchmaking.notReady=PLAY FORGED ALLIANCE FOREVER
+teammatchmaking.hint=SELECT QUEUES BELOW AND WAIT FOR MATCH
+teammatchmaking.play=PLAY FORGED ALLIANCE FOREVER
 teammatchmaking.playerTitle=PLAYING MATCHMAKING AS:
 teammatchmaking.partyTitle=YOUR PARTY:
 statusBar.chatConnected=Chat connected
