Show reason for not rated games
Fixes #1864

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -655,7 +655,7 @@ replay.playerCountTooltip=Players
 replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
 game.showRatingChange=Show rating change
-game.notValid=The game was not rated
+game.reasonNotValid=The game was not rated: {0}
 game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
