Improve map generator message keys
"game.generate" is too ambiguous.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -177,20 +177,19 @@ game.create.titleMissing=Title is missing
 game.create.featuredModMissing=Game type is missing
 game.create.failed=Game could not be created.
 game.create.generatedMapNew=NEW
-game.generate=Generate new map
-game.generate.recreate=Regenerate map using the following map name:
-game.generate.generateNew=Generate a new map using the following options:
-game.generate.dialog=Map Generator Options
-game.generate.nameCaution=Enter the name of a generated map you want to regenerate. Map name must be of the form neroxis_map_generator_(version)_(seed)_(options).
-game.generate.generatedName=Map Name
-game.generate.generatedMapNew=NEW
-game.generate.waterSlider=Water
-game.generate.plateauSlider=Plateaus
-game.generate.mountainSlider=Mountains
-game.generate.rampSlider=Ramps
-game.generate.random=Random
-game.generate.none=None
-game.generate.lots=Lots
+game.generateMap=Generate new map
+game.generateMap.recreate=Regenerate map using the following map name:
+game.generateMap.generateNew=Generate a new map using the following options:
+game.generateMap.dialog=Map Generator Options
+game.generateMap.nameCaution=Enter the name of a generated map you want to regenerate. Map name must be of the form neroxis_map_generator_(version)_(seed)_(options).
+game.generateMap.generatedName=Map Name
+game.generateMap.waterSlider=Water
+game.generateMap.plateauSlider=Plateaus
+game.generateMap.mountainSlider=Mountains
+game.generateMap.rampSlider=Ramps
+game.generateMap.random=Random
+game.generateMap.none=None
+game.generateMap.lots=Lots
 game.rehost.failed=Rehosting game failed.
 game.title=Title
 game.players=Players
