tmm - display matching status

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -116,6 +116,11 @@ teammatchmaking.notification.invite.message={0} has invited you to join their pa
 teammatchmaking.notification.invite.join=Join
 teammatchmaking.ready=You are ready!
 teammatchmaking.notReady=Ready up!
+teammatchmaking.match.found=Match found!
+teammatchmaking.match.starting=Match launching...
+teammatchmaking.match.cancelled=Match cancelled!
+teammatchmaking.notification.matchFound.title=Match found
+teammatchmaking.notification.matchFound.message=A match was found and will launch soon
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
