Add proper time filtering to rating graph

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -448,6 +448,9 @@ userInfo.losses=Losses
 userInfo.ratingOverTime=Rating over time
 userInfo.ratingHistory.1v1=1v1
 userInfo.ratingHistory.global=Global
+userInfo.ratingHistory.allTime=All Time
+userInfo.ratingHistory.lastYear=Last Year
+userInfo.ratingHistory.lastMonth=Last Month
 serInfo.statistics.errorLoading=Could not load statistics
 userInfo.achievements=Achievements
 userInfo.achievements.errorLoading=Could not load achievements
