--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -655,7 +655,31 @@ replay.playerCountTooltip=Players
 replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
 game.showRatingChange=Show rating change
-game.reasonNotValid=The game was not rated: {0}
+game.reasonNotValid=Game was not rated. Reason: {0}
+game.reasonNotValid.1=Too Many Desyncs
+game.reasonNotValid.2=Wrong Victory Condition
+game.reasonNotValid.3=No Fog of War
+game.reasonNotValid.4=Cheats Enabled
+game.reasonNotValid.5=Prebuilt Enabled
+game.reasonNotValid.6=No Rush Enabled
+game.reasonNotValid.7=Unit Restrictions
+game.reasonNotValid.8=Unranked Map
+game.reasonNotValid.9=Game Too Short
+game.reasonNotValid.10=Unranked Mod
+game.reasonNotValid.11=Coop Game
+game.reasonNotValid.12=Mutual Draw
+game.reasonNotValid.13=Single Player
+game.reasonNotValid.14=FFA
+game.reasonNotValid.15=Uneven Teams
+game.reasonNotValid.16=Unknown Result
+game.reasonNotValid.17=Teams Unlocked
+game.reasonNotValid.18=Multiple Teams
+game.reasonNotValid.19=Had AI
+game.reasonNotValid.20=Civilians Revealed
+game.reasonNotValid.21=Wrong Difficulty
+game.reasonNotValid.22=Expansion Disabled
+game.reasonNotValid.23=Spawn Not Fixed
+game.reasonNotValid.24=Other
 game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
