i18n over String.format

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -656,6 +656,7 @@ replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
 game.showRatingChange=Show rating change
 game.reasonNotValid=Game was not rated. Reason: {0}
+game.reasonNotValid.keyFormat=game.reasonNotValid.{0}
 game.reasonNotValid.1=Too Many Desyncs
 game.reasonNotValid.2=Wrong Victory Condition
 game.reasonNotValid.3=No Fog of War
