copy local replay info to clipboard

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -303,6 +303,8 @@ vault.replays.ownReplays=Your replays
 vault.replays.displayQuery=Display search query
 vault.replays.queryPrompt=Build a query above or enter one manually
 vault.replays.searchError=An error has occurred while searching for replays.
+vault.replays.copyReplayId=Copy Replay Id
+vault.replays.copyReplayPath=Copy Replay Path
 vault.displayQuery=Display search query
 vault.queryPrompt=Build a query above or enter one manually
 vault.searchError=An error has occurred while searching.
