Add install button to map and mod cards for easier UX for installing

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -358,6 +358,7 @@ mapVault.mostLikedMaps=Most liked
 mapVault.newestMaps=Most recent
 mapVault.mostPlayed=Most played
 mapVault.installButtonFormat=Install ({0})
+mapVault.install=Install
 mapVault.uninstall=Uninstall
 vault.upload=Upload…
 mod.description=Description
