--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -121,6 +121,8 @@ teammatchmaking.match.starting=Match launching...
 teammatchmaking.match.cancelled=Match cancelled!
 teammatchmaking.notification.matchFound.title=Match found
 teammatchmaking.notification.matchFound.message=A match was found and will launch soon
+teammatchmaking.queue.ladder1v1.name=Ladder 1v1
+teammatchmaking.queue.tmm2v2.name=Team 2v2
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
