notify and block party invite / join when in queue

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -121,6 +121,10 @@ teammatchmaking.match.starting=Match launching...
 teammatchmaking.match.cancelled=Match cancelled!
 teammatchmaking.notification.matchFound.title=Match found
 teammatchmaking.notification.matchFound.message=A match was found and will launch soon
+teammatchmaking.notification.inviteAlreadyInQueue.title=You are already in a queue
+teammatchmaking.notification.inviteAlreadyInQueue.message=Please leave all queues before inviting a player
+teammatchmaking.notification.joinAlreadyInQueue.title=You are already in a queue
+teammatchmaking.notification.joinAlreadyInQueue.message=Please leave all queues before joining a party
 teammatchmaking.queue.ladder1v1.name=Ladder 1v1
 teammatchmaking.queue.tmm2v2.name=Team 2v2
 statusBar.chatConnected=Chat connected
